# PG_Trabalho_GA

./: .gitignore  Cenas GA.pptx  MANUAL (COMO JOGAR).txt  PROJETO_PG_GA.sln  README.md
PROJETO_PG_GA/: CMakeLists.txt  PROJETO_PG_GA.vcxproj  PROJETO_PG_GA.vcxproj.filters
PROJETO_PG_GA/header/: BackgroundObject.h  Character.h  CharacterObject.h  GameObject.h  Includes.h  Layer.h  Position.h  Projectile.h  Shader.h  Sprite.h  SpriteSheet.h  Texture.h  Utils.h  VerticesObject.h  stb_image.h
PROJETO_PG_GA/shader/: fragmentShader.txt  objFragmentShader.fs  sceneFragmentShader.fs  vertexShader.txt
PROJETO_PG_GA/source/: main.cpp
TESTANDO/: CMakeLists.txt
TESTANDO/header/: Includes.h  Shader.h
TESTANDO/shader/: sceneVertexShader.vs
